# OA_Configurator

./: .gitignore  README.md  oa_system_config_demo.yaml  pyproject.toml
oa_configurator/: __init__.py  config.py
