[tool.poetry]
name = "oa-configurator"
version = "0.1.0"
description = "handles pipeline and db configuration for nextCR tools"
authors = ["georgie <georgina.kennedy@unsw.edu.au>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
keyring = "^24.3.0"
sqlalchemy = "^2.0.27"
pyyaml = "^6.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
